--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,3 @@ body {
   padding: 0;
   border: 0;
 }
-
-a {
-  color: inherit;
-}
